--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.23.6",
     "axios": "^0.19.0",
     "jwt-decode": "^2.2.0",
+    "mock.js": "^0.2.0",
     "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
