--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
     "antd": "^3.23.6",
     "axios": "^0.19.0",
+    "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "mock.js": "^0.2.0",
     "moment": "^2.24.0",
+    "npm": "^6.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
