--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.1",
     "antd": "^3.23.6",
     "axios": "^0.19.0",
+    "firebase": "^7.2.1",
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "mock.js": "^0.2.0",
@@ -16,6 +17,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
