--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.1",
-    "antd": "^3.23.6",
+    "antd": "^3.24.1",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.2",
+    "enquire-js": "^0.2.1",
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "mock.js": "^0.2.0",
     "moment": "^2.24.0",
     "npm": "^6.12.0",
+    "rc-banner-anim": "^2.4.2",
+    "rc-queue-anim": "^1.8.2",
+    "rc-scroll-anim": "^2.6.2",
+    "rc-tween-one": "^2.6.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
