--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@material-ui/core": "^4.5.1",
     "antd": "^3.24.1",
     "axios": "^0.19.0",
-    "firebase": "^7.2.1",
     "babel-plugin-import": "^1.12.2",
+    "customize-cra": "^0.8.0",
     "enquire-js": "^0.2.1",
+    "firebase": "^7.2.1",
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "mock.js": "^0.2.0",
     "moment": "^2.24.0",
     "npm": "^6.12.0",
@@ -19,6 +22,7 @@
     "rc-scroll-anim": "^2.6.2",
     "rc-tween-one": "^2.6.5",
     "react": "^16.10.2",
+    "react-app-rewired": "^2.1.4",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
@@ -28,10 +32,10 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
