--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react": "^16.10.2",
     "react-app-rewired": "^2.1.4",
     "react-dom": "^16.10.2",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
