--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.24.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
+    "core-util-is": "^1.0.2",
     "customize-cra": "^0.8.0",
     "enquire-js": "^0.2.1",
     "firebase": "^7.2.1",
@@ -16,6 +17,7 @@
     "jwt-decode": "^2.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "mime": "^2.4.4",
     "mock.js": "^0.2.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
@@ -27,16 +29,16 @@
     "react": "^16.10.2",
     "react-app-rewired": "^2.1.4",
     "react-dom": "^16.10.2",
-    "react-quill": "^1.3.3",
     "react-highlight-words": "^0.16.0",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "video-react": "^0.14.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
